--- a/helm_chart/binance-ws-subscriber/values.yaml
+++ b/helm_chart/binance-ws-subscriber/values.yaml
@@ -8,8 +8,8 @@ strategy:
     maxUnavailable: 1
 
 image:
-  repository: <your-dockerhub-username>/binance-ws-subscriber
-  tag: "1.0.0"
+  repository: bennyleungyc/binance-ws-subscriber
+  tag: "1.0.2"
   pullPolicy: IfNotPresent
 
 imagePullSecrets: 
