--- a/helm_chart/crypto-ws-subscriber/values.yaml
+++ b/helm_chart/crypto-ws-subscriber/values.yaml
@@ -8,8 +8,8 @@ strategy:
     maxUnavailable: 1
 
 image:
-  repository: <your-dockerhub-username>/crypto-ws-subscriber
-  tag: "1.0.0"
+  repository: bennyleungyc/crypto-ws-subscriber
+  tag: "1.0.3"
   pullPolicy: IfNotPresent
 
 imagePullSecrets: 
